# MicrofacetDistribution

./: .gitignore  CMakeLists.txt  README.md  common.h  main.cpp  microfacet.h  random.h  run.sh
src/: CMakeLists.txt  argparse.h  main.cpp  microfacet.h  random.h  timer.h  vec.h
